20221004 Office Review ML

--- a/data_analysis/(김성) 머신러닝_딥러닝/(Lec10-1) Sigmoid보다 ReLU가 더 좋아.ipynb
+++ b/data_analysis/(김성) 머신러닝_딥러닝/(Lec10-1) Sigmoid보다 ReLU가 더 좋아.ipynb
@@ -4,15 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture 8-1 Deep Neural Nets for Everyone"
+    "# Lecture 10-1 ReLu: Better non-linearity"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## NN for XOR\n"
+   ]
   }
  ],
  "metadata": {
