--- a/data_analysis/LaTeX 문법/LaTex.ipynb
+++ b/data_analysis/LaTeX 문법/LaTex.ipynb
@@ -11,6 +11,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    " $$H(x) = Wx + b$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$cost(W, b) = \\frac{1}{m}\\sum_{i=1}^m (H(x^{(i)}) - y^{(i)})^2$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$H(X) = \\frac{1}{1+e^{-(W^TX)}}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$a_1$$"
    ]
   },
@@ -85,21 +106,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\mathcal{L} = \\frac{1}{N} \\sum_i \\mathcal{D}(S(WX_i + b), L_i) + \\lambda \\sum W^2$$\n",
+    "$$\\mathcal{L} : Lost \\;Function$$\n",
+    "$$\\lambda : regularization \\;strength$$ \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (Temp/ipykernel_2596/3533877054.py, line 1)",
+     "evalue": "invalid syntax (Temp/ipykernel_20852/3298940330.py, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\USER\\AppData\\Local\\Temp/ipykernel_2596/3533877054.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    $$y=\\\\prod_{k=1}^n a_k$$\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\USER\\AppData\\Local\\Temp/ipykernel_20852/3298940330.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    $$y=\\prod_{k=1}^n a_k$$\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
-    "$$y=prod_{k=1}^n a_k$$"
+    "$$ y=\\prod_{k=1}^n a_k $$"
    ]
   },
   {
