20221004 Home Review ML

--- a/data_analysis/(김성) 머신러닝_딥러닝/(Lec08-1) 딥러닝의 기본개념_시작과 XOR문제.ipynb
+++ b/data_analysis/(김성) 머신러닝_딥러닝/(Lec08-1) 딥러닝의 기본개념_시작과 XOR문제.ipynb
@@ -8,10 +8,113 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "## Ultimate dream: thinking machine\n",
+    "\n",
+    "<img src=\"./think_machine.png\" width=\"900px\" height=\"400px\" title=\"Queue Runner\"></img>\n",
+    "<img src=\"./activation.png\" width=\"900px\" height=\"400px\" title=\"Queue Runner\"></img>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Logistic regression units\n",
+    "<img src=\"./lr_units.png\" width=\"900px\" height=\"400px\" title=\"Queue Runner\"></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hardware implementations\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## False Promises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##(Simple) AND/OR problem: linearly separable?\n",
+    "\n",
+    "<img src=\"./and_or.png\" width=\"500px\" height=\"400px\" title=\"Queue Runner\"></img>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##(Simple) XOR problem: linearly separable?\n",
+    "\n",
+    "<img src=\"./xor.png\" width=\"500px\" height=\"400px\" title=\"Queue Runner\"></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Perceptron(1969)\n",
+    "by Marvin Minsky, founder of the MIT AI Lab\n",
+    "- We need to use MLP, multilayer perceptrons(multilayer neural nets)\n",
+    "- No one on earth had found a viable way to train MLPs good enouth to learn such simple functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## \"No one on earth had found a viable way to train\"\n",
+    "\n",
+    "<img src=\"./minsky.png\" width=\"500px\" height=\"400px\" title=\"Queue Runner\"></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Backpropagaton\n",
+    "(1974, 1982 by Paul Werbos, 1986 by Hinton)\n",
+    "\n",
+    "<img src=\"./backpropagation.png\" width=\"800px\" height=\"500px\" title=\"Queue Runner\"></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Convolutional Neural Networks\n",
+    "- AlphaGo 사용한 방법\n",
+    "- At some point in the late 1990s, one of these systems was reading 10 to 20% of all the checks in the US\n",
+    "- \n",
+    "\n",
+    "<img src=\"./cnn.png\" width=\"400px\" height=\"200px\" title=\"Queue Runner\"></img>\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A BIG problem\n",
+    "- Backpropagation jus did not work well for normal neural nets with many layers\n",
+    "- Other rising machine learing algorithms: SVM, RandomForest, etc.\n",
+    "- 1995 \"Comparison of Learing Algorithms For Handwritten Digit Recognition\" by LeCun et al. found that this new approach worked better\n",
+    "\n",
+    "<img src=\"./bp_problem.jpg\" width=\"800px\" height=\"200px\" title=\"Queue Runner\"></img>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
