--- a/data_analysis/(김성) 머신러닝_딥러닝/실습자료/lab-07-4-mnist_introduction_1.ipynb
+++ b/data_analysis/(김성) 머신러닝_딥러닝/실습자료/lab-07-4-mnist_introduction_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,71 +12,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([[[0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         ...,\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0]],\n",
-       " \n",
-       "        [[0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         ...,\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0]],\n",
-       " \n",
-       "        [[0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         ...,\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0]],\n",
-       " \n",
-       "        ...,\n",
-       " \n",
-       "        [[0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         ...,\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0]],\n",
-       " \n",
-       "        [[0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         ...,\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0]],\n",
-       " \n",
-       "        [[0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         ...,\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0],\n",
-       "         [0, 0, 0, ..., 0, 0, 0]]], dtype=uint8),\n",
-       " array([5, 0, 4, ..., 5, 6, 8], dtype=uint8))"
+       "(60000,)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_train"
+    "data_train[0].shape\n",
+    "data_train[1].shape\n"
    ]
   },
   {
@@ -235,7 +187,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -249,12 +201,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f08154012ddadd8e950e6e9e035c7a7b32c136e7647e9b7c77e02eb723a8bedb"
+    "hash": "263930470851f494f0ed2879c35b57985588df20f9e529b86e97dd5eb9ddc466"
    }
   }
  },
