20221014 Office Review ML

--- a/data_analysis/(이수안컴퓨터연구소) TensorFlow/5. 텐서플로우_Data_API.ipynb
+++ b/data_analysis/(이수안컴퓨터연구소) TensorFlow/5. 텐서플로우_Data_API.ipynb
@@ -24,16 +24,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "^C\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install tensorflow_datasets"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "uA_5y-rv5K0x"
       },
@@ -45,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "id": "_77BigY5g3hd"
       },
@@ -65,77 +73,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "metadata": {
         "id": "wmRzwmofg3ef"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\u001b[1mDownloading and preparing dataset Unknown size (download: Unknown size, generated: Unknown size, total: Unknown size) to C:\\Users\\USER\\tensorflow_datasets\\mnist\\3.0.1...\u001b[0m\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Dl Completed...: 0 url [00:00, ? url/s]\n",
-            "Dl Completed...:   0%|          | 0/1 [00:00<?, ? url/s]\n",
-            "Dl Completed...:   0%|          | 0/2 [00:00<?, ? url/s]\n",
-            "Dl Completed...:   0%|          | 0/3 [00:00<?, ? url/s]\n",
-            "Dl Completed...:   0%|          | 0/4 [00:00<?, ? url/s]\n",
-            "Dl Completed...:   0%|          | 0/4 [00:00<?, ? url/s]\n",
-            "Dl Completed...:   0%|          | 0/4 [00:00<?, ? url/s]\n",
-            "Dl Completed...:   0%|          | 0/4 [00:00<?, ? url/s]\n",
-            "Dl Completed...:   0%|          | 0/4 [00:00<?, ? url/s]\n",
-            "Dl Completed...:  25%|██▌       | 1/4 [00:00<00:01,  3.00 url/s]\n",
-            "Dl Completed...:  50%|█████     | 2/4 [00:00<00:00,  3.00 url/s]\n",
-            "Dl Completed...:  50%|█████     | 2/4 [00:00<00:00,  3.00 url/s]\n",
-            "Dl Completed...:  50%|█████     | 2/4 [00:00<00:00,  3.00 url/s]\n",
-            "\u001b[A\n",
-            "Dl Completed...:  50%|█████     | 2/4 [00:00<00:00,  3.00 url/s]\n",
-            "Dl Completed...:  50%|█████     | 2/4 [00:00<00:00,  3.00 url/s]\n",
-            "Dl Completed...:  50%|█████     | 2/4 [00:00<00:00,  3.00 url/s]\n",
-            "Dl Completed...:  50%|█████     | 2/4 [00:00<00:00,  3.00 url/s]\n",
-            "Dl Completed...:  50%|█████     | 2/4 [00:00<00:00,  3.00 url/s]\n",
-            "Dl Completed...:  75%|███████▌  | 3/4 [00:00<00:00,  4.17 url/s]\n",
-            "Dl Completed...:  75%|███████▌  | 3/4 [00:00<00:00,  4.17 url/s]\n",
-            "Dl Completed...:  75%|███████▌  | 3/4 [00:00<00:00,  4.17 url/s]\n",
-            "\u001b[A\n",
-            "Dl Completed...:  75%|███████▌  | 3/4 [00:00<00:00,  4.17 url/s]\n",
-            "Dl Completed...:  75%|███████▌  | 3/4 [00:00<00:00,  4.17 url/s]\n",
-            "Dl Completed...:  75%|███████▌  | 3/4 [00:01<00:00,  4.17 url/s]\n",
-            "Dl Completed...:  75%|███████▌  | 3/4 [00:01<00:00,  4.17 url/s]\n",
-            "Dl Completed...:  75%|███████▌  | 3/4 [00:01<00:00,  4.17 url/s]\n",
-            "Dl Completed...:  75%|███████▌  | 3/4 [00:01<00:00,  4.17 url/s]\n",
-            "Dl Completed...:  75%|███████▌  | 3/4 [00:01<00:00,  4.17 url/s]\n",
-            "Dl Completed...: 100%|██████████| 4/4 [00:01<00:00,  2.45 url/s]\n",
-            "Dl Completed...: 100%|██████████| 4/4 [00:01<00:00,  2.45 url/s]\n",
-            "\u001b[A\n",
-            "Dl Completed...: 100%|██████████| 4/4 [00:02<00:00,  2.45 url/s]\n",
-            "Extraction completed...: 100%|██████████| 4/4 [00:02<00:00,  1.86 file/s]\n",
-            "Dl Size...: 100%|██████████| 10/10 [00:02<00:00,  4.64 MiB/s]\n",
-            "Dl Completed...: 100%|██████████| 4/4 [00:02<00:00,  1.86 url/s]\n",
-            "                                                                        "
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\u001b[1mDataset mnist downloaded and prepared to C:\\Users\\USER\\tensorflow_datasets\\mnist\\3.0.1. Subsequent calls will reuse this data.\u001b[0m\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\r"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "data, info = tfds.load('mnist', with_info=True)\n",
         "train_data, test_data = data['train'], data['test']"
@@ -143,7 +85,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 6,
       "metadata": {
         "id": "PgvmOxeYg3bi"
       },
@@ -229,48 +171,98 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "HWzGguIUg3Yi"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "aaO5aOqsg3Vf"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "num_items = 20\n",
+        "num_list = np.arange(num_items)"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "rFKz4nK2g3Sd"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "num_list_dataset = tf.data.Dataset.from_tensor_slices(num_list)"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "gzqeoFS6g3Pg"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "<TensorSliceDataset element_spec=TensorSpec(shape=(), dtype=tf.int32, name=None)>"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "num_list_dataset"
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "oBK4nAS7lpBJ"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "tf.Tensor(0, shape=(), dtype=int32)\n",
+            "tf.Tensor(1, shape=(), dtype=int32)\n",
+            "tf.Tensor(2, shape=(), dtype=int32)\n",
+            "tf.Tensor(3, shape=(), dtype=int32)\n",
+            "tf.Tensor(4, shape=(), dtype=int32)\n",
+            "tf.Tensor(5, shape=(), dtype=int32)\n",
+            "tf.Tensor(6, shape=(), dtype=int32)\n",
+            "tf.Tensor(7, shape=(), dtype=int32)\n",
+            "tf.Tensor(8, shape=(), dtype=int32)\n",
+            "tf.Tensor(9, shape=(), dtype=int32)\n",
+            "tf.Tensor(10, shape=(), dtype=int32)\n",
+            "tf.Tensor(11, shape=(), dtype=int32)\n",
+            "tf.Tensor(12, shape=(), dtype=int32)\n",
+            "tf.Tensor(13, shape=(), dtype=int32)\n",
+            "tf.Tensor(14, shape=(), dtype=int32)\n",
+            "tf.Tensor(15, shape=(), dtype=int32)\n",
+            "tf.Tensor(16, shape=(), dtype=int32)\n",
+            "tf.Tensor(17, shape=(), dtype=int32)\n",
+            "tf.Tensor(18, shape=(), dtype=int32)\n",
+            "tf.Tensor(19, shape=(), dtype=int32)\n"
+          ]
+        }
+      ],
+      "source": [
+        "for item in num_list_dataset:\n",
+        "    print(item)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -286,11 +278,55 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def gen():\n",
+        "    for i in itertools.count(1):\n",
+        "        yield (i, [1]*i)\n",
+        "\n",
+        "k = 0\n",
+        "for j in gen():\n",
+        "    print(j)\n",
+        "    if k > 3:\n",
+        "        break"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 12,
       "metadata": {
         "id": "5LEG6TzOsOAB"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[(1, array([1], dtype=int64)),\n",
+              " (2, array([1, 1], dtype=int64)),\n",
+              " (3, array([1, 1, 1], dtype=int64))]"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "import itertools\n",
+        "\n",
+        "def gen():\n",
+        "    for i in itertools.count(1):\n",
+        "        yield (i, [1]*i)\n",
+        "\n",
+        "dataset = tf.data.Dataset.from_generator(\n",
+        "    gen,\n",
+        "    (tf.int64, tf.int64),\n",
+        "    (tf.TensorShape([]), tf.TensorShape([None]))\n",
+        ")\n",
+        "\n",
+        "list(dataset.take(3).as_numpy_iterator())"
+      ]
     },
     {
       "cell_type": "code",
