20221025 Office Review ML

--- a/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/3장/3.6 피마 인디언 당뇨병 예측.ipynb
+++ b/data_analysis/(권철민) 파이썬 머신러닝 완벽 가이드(인프런)/3장/3.6 피마 인디언 당뇨병 예측.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "2                     0.672   32        1  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -283,6 +283,179 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.95829912, 0.04170088],\n",
+       "       [0.79083452, 0.20916548],\n",
+       "       [0.8351447 , 0.1648553 ],\n",
+       "       [0.48345415, 0.51654585],\n",
+       "       [0.91839709, 0.08160291],\n",
+       "       [0.3062415 , 0.6937585 ],\n",
+       "       [0.28696341, 0.71303659],\n",
+       "       [0.81439423, 0.18560577],\n",
+       "       [0.81288825, 0.18711175],\n",
+       "       [0.79933162, 0.20066838],\n",
+       "       [0.372132  , 0.627868  ],\n",
+       "       [0.51631301, 0.48368699],\n",
+       "       [0.92355746, 0.07644254],\n",
+       "       [0.65147789, 0.34852211],\n",
+       "       [0.7365928 , 0.2634072 ],\n",
+       "       [0.85746446, 0.14253554],\n",
+       "       [0.28457097, 0.71542903],\n",
+       "       [0.65865295, 0.34134705],\n",
+       "       [0.96872663, 0.03127337],\n",
+       "       [0.28382669, 0.71617331],\n",
+       "       [0.64925862, 0.35074138],\n",
+       "       [0.69519033, 0.30480967],\n",
+       "       [0.92742934, 0.07257066],\n",
+       "       [0.66982668, 0.33017332],\n",
+       "       [0.69949101, 0.30050899],\n",
+       "       [0.85248134, 0.14751866],\n",
+       "       [0.15077026, 0.84922974],\n",
+       "       [0.34158991, 0.65841009],\n",
+       "       [0.74852666, 0.25147334],\n",
+       "       [0.20683345, 0.79316655],\n",
+       "       [0.79794618, 0.20205382],\n",
+       "       [0.77712657, 0.22287343],\n",
+       "       [0.82026457, 0.17973543],\n",
+       "       [0.75004278, 0.24995722],\n",
+       "       [0.82388526, 0.17611474],\n",
+       "       [0.4209149 , 0.5790851 ],\n",
+       "       [0.71307837, 0.28692163],\n",
+       "       [0.45338955, 0.54661045],\n",
+       "       [0.25135241, 0.74864759],\n",
+       "       [0.36773994, 0.63226006],\n",
+       "       [0.51528999, 0.48471001],\n",
+       "       [0.70049058, 0.29950942],\n",
+       "       [0.40543987, 0.59456013],\n",
+       "       [0.78355738, 0.21644262],\n",
+       "       [0.64958244, 0.35041756],\n",
+       "       [0.94283725, 0.05716275],\n",
+       "       [0.28433449, 0.71566551],\n",
+       "       [0.86715091, 0.13284909],\n",
+       "       [0.49987953, 0.50012047],\n",
+       "       [0.68224632, 0.31775368],\n",
+       "       [0.67747816, 0.32252184],\n",
+       "       [0.18974112, 0.81025888],\n",
+       "       [0.16777599, 0.83222401],\n",
+       "       [0.88688779, 0.11311221],\n",
+       "       [0.81100691, 0.18899309],\n",
+       "       [0.62541188, 0.37458812],\n",
+       "       [0.8934673 , 0.1065327 ],\n",
+       "       [0.61068971, 0.38931029],\n",
+       "       [0.65379888, 0.34620112],\n",
+       "       [0.5576226 , 0.4423774 ],\n",
+       "       [0.77202137, 0.22797863],\n",
+       "       [0.27299698, 0.72700302],\n",
+       "       [0.68730912, 0.31269088],\n",
+       "       [0.39212901, 0.60787099],\n",
+       "       [0.72456909, 0.27543091],\n",
+       "       [0.84607031, 0.15392969],\n",
+       "       [0.77354755, 0.22645245],\n",
+       "       [0.2892392 , 0.7107608 ],\n",
+       "       [0.80970287, 0.19029713],\n",
+       "       [0.27625585, 0.72374415],\n",
+       "       [0.8769221 , 0.1230779 ],\n",
+       "       [0.66280016, 0.33719984],\n",
+       "       [0.8510521 , 0.1489479 ],\n",
+       "       [0.54838138, 0.45161862],\n",
+       "       [0.35114671, 0.64885329],\n",
+       "       [0.7217358 , 0.2782642 ],\n",
+       "       [0.9088749 , 0.0911251 ],\n",
+       "       [0.8448672 , 0.1551328 ],\n",
+       "       [0.87457929, 0.12542071],\n",
+       "       [0.66446203, 0.33553797],\n",
+       "       [0.86400358, 0.13599642],\n",
+       "       [0.86887616, 0.13112384],\n",
+       "       [0.24098225, 0.75901775],\n",
+       "       [0.76182005, 0.23817995],\n",
+       "       [0.66045917, 0.33954083],\n",
+       "       [0.65878586, 0.34121414],\n",
+       "       [0.28241379, 0.71758621],\n",
+       "       [0.33061043, 0.66938957],\n",
+       "       [0.89047201, 0.10952799],\n",
+       "       [0.93371758, 0.06628242],\n",
+       "       [0.90826253, 0.09173747],\n",
+       "       [0.84926474, 0.15073526],\n",
+       "       [0.22865883, 0.77134117],\n",
+       "       [0.67840068, 0.32159932],\n",
+       "       [0.68617011, 0.31382989],\n",
+       "       [0.35785751, 0.64214249],\n",
+       "       [0.73593619, 0.26406381],\n",
+       "       [0.72319421, 0.27680579],\n",
+       "       [0.92984453, 0.07015547],\n",
+       "       [0.42422486, 0.57577514],\n",
+       "       [0.2232014 , 0.7767986 ],\n",
+       "       [0.54045869, 0.45954131],\n",
+       "       [0.68897313, 0.31102687],\n",
+       "       [0.65117686, 0.34882314],\n",
+       "       [0.86412451, 0.13587549],\n",
+       "       [0.53730371, 0.46269629],\n",
+       "       [0.6907209 , 0.3092791 ],\n",
+       "       [0.48998945, 0.51001055],\n",
+       "       [0.92016608, 0.07983392],\n",
+       "       [0.88328212, 0.11671788],\n",
+       "       [0.47905498, 0.52094502],\n",
+       "       [0.53316254, 0.46683746],\n",
+       "       [0.80541504, 0.19458496],\n",
+       "       [0.77898504, 0.22101496],\n",
+       "       [0.69327286, 0.30672714],\n",
+       "       [0.48631266, 0.51368734],\n",
+       "       [0.26883624, 0.73116376],\n",
+       "       [0.84890921, 0.15109079],\n",
+       "       [0.62121492, 0.37878508],\n",
+       "       [0.04616919, 0.95383081],\n",
+       "       [0.41374898, 0.58625102],\n",
+       "       [0.98066627, 0.01933373],\n",
+       "       [0.1179125 , 0.8820875 ],\n",
+       "       [0.38675606, 0.61324394],\n",
+       "       [0.7074446 , 0.2925554 ],\n",
+       "       [0.75169798, 0.24830202],\n",
+       "       [0.84465128, 0.15534872],\n",
+       "       [0.91332591, 0.08667409],\n",
+       "       [0.76664589, 0.23335411],\n",
+       "       [0.8213165 , 0.1786835 ],\n",
+       "       [0.94503061, 0.05496939],\n",
+       "       [0.88507918, 0.11492082],\n",
+       "       [0.55853625, 0.44146375],\n",
+       "       [0.89133927, 0.10866073],\n",
+       "       [0.91921903, 0.08078097],\n",
+       "       [0.43065092, 0.56934908],\n",
+       "       [0.2498986 , 0.7501014 ],\n",
+       "       [0.26960573, 0.73039427],\n",
+       "       [0.90665492, 0.09334508],\n",
+       "       [0.8507406 , 0.1492594 ],\n",
+       "       [0.82428968, 0.17571032],\n",
+       "       [0.59725442, 0.40274558],\n",
+       "       [0.48329804, 0.51670196],\n",
+       "       [0.78086351, 0.21913649],\n",
+       "       [0.35749515, 0.64250485],\n",
+       "       [0.91750033, 0.08249967],\n",
+       "       [0.78207885, 0.21792115],\n",
+       "       [0.94608581, 0.05391419],\n",
+       "       [0.34415319, 0.65584681],\n",
+       "       [0.5159139 , 0.4840861 ],\n",
+       "       [0.6355694 , 0.3644306 ],\n",
+       "       [0.90880022, 0.09119978],\n",
+       "       [0.44508051, 0.55491949],\n",
+       "       [0.83238172, 0.16761828]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr_clf.predict_proba(X_test)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -291,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +652,7 @@
        "max     67.100000                  2.420000   81.000000    1.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -611,11 +784,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "오차 행렬\n",
+      "[[90 10]\n",
+      " [21 33]]\n",
+      "정확도: 0.7987, 정밀도: 0.7674, 재현율: 0.6111,    F1: 0.6804, AUC:0.8433\n"
+     ]
+    }
+   ],
    "source": [
     "X = diabetes_data.iloc[:, :-1]\n",
     "y = diabetes_data.iloc[:, -1]\n",
@@ -644,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,9 +845,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "임곗값: 0.3\n",
+      "오차 행렬\n",
+      "[[65 35]\n",
+      " [11 43]]\n",
+      "정확도: 0.7013, 정밀도: 0.5513, 재현율: 0.7963,    F1: 0.6515, AUC:0.8433\n",
+      "임곗값: 0.33\n",
+      "오차 행렬\n",
+      "[[71 29]\n",
+      " [11 43]]\n",
+      "정확도: 0.7403, 정밀도: 0.5972, 재현율: 0.7963,    F1: 0.6825, AUC:0.8433\n",
+      "임곗값: 0.36\n",
+      "오차 행렬\n",
+      "[[76 24]\n",
+      " [15 39]]\n",
+      "정확도: 0.7468, 정밀도: 0.6190, 재현율: 0.7222,    F1: 0.6667, AUC:0.8433\n",
+      "임곗값: 0.39\n",
+      "오차 행렬\n",
+      "[[78 22]\n",
+      " [16 38]]\n",
+      "정확도: 0.7532, 정밀도: 0.6333, 재현율: 0.7037,    F1: 0.6667, AUC:0.8433\n",
+      "임곗값: 0.42\n",
+      "오차 행렬\n",
+      "[[84 16]\n",
+      " [18 36]]\n",
+      "정확도: 0.7792, 정밀도: 0.6923, 재현율: 0.6667,    F1: 0.6792, AUC:0.8433\n",
+      "임곗값: 0.45\n",
+      "오차 행렬\n",
+      "[[85 15]\n",
+      " [18 36]]\n",
+      "정확도: 0.7857, 정밀도: 0.7059, 재현율: 0.6667,    F1: 0.6857, AUC:0.8433\n",
+      "임곗값: 0.48\n",
+      "오차 행렬\n",
+      "[[88 12]\n",
+      " [19 35]]\n",
+      "정확도: 0.7987, 정밀도: 0.7447, 재현율: 0.6481,    F1: 0.6931, AUC:0.8433\n",
+      "임곗값: 0.5\n",
+      "오차 행렬\n",
+      "[[90 10]\n",
+      " [21 33]]\n",
+      "정확도: 0.7987, 정밀도: 0.7674, 재현율: 0.6111,    F1: 0.6804, AUC:0.8433\n"
+     ]
+    }
+   ],
    "source": [
     "thresholds = [0.3 , 0.33 ,0.36,0.39, 0.42 , 0.45 ,0.48, 0.50]\n",
     "pred_proba = lr_clf.predict_proba(X_test)\n",
@@ -672,9 +903,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "오차 행렬\n",
+      "[[88 12]\n",
+      " [19 35]]\n",
+      "정확도: 0.7987, 정밀도: 0.7447, 재현율: 0.6481,    F1: 0.6931, AUC:0.8433\n"
+     ]
+    }
+   ],
    "source": [
     "# 임곗값를 0.48로 설정한 Binarizer 생성\n",
     "binarizer = Binarizer(threshold=0.48)\n",
